# InvestingAssistant

./: .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  pyproject.toml  req.txt
bot/: Dockerfile  code_formatter.py
bot/src/: db.py  parsing.py
bot/src/IPSA_MODEL/: .gitignore  README.md
bot/src/IPSA_MODEL/news/: data.py  train.py
bot/src/IPSA_MODEL/price/: clean_csv.py  create_dataset.py  train_model.py
bot/src/kb_builder/: admin_panel.py
src/: assets.py  config.py  core.py  create_report.py  db.py  func.py  handlers.py  main.py  neuro.py  parsing.py  plt_gen.py  proxy_manager.py  train.py
src/kb_builder/: admin_panel.py  user_panel.py
src/model/: core.py  influence_core.py  predict_influence.py  price_core.py  scaler.save  stock_model.h5  train.py
src/resources/: messages.py
