[tool.poetry]
name = "ipsa"
version = "0.1.1"
description = "Telegram bot that will help the user to track the latest news on the stock exchange, get up-to-date information on investments thanks to artificial intelligence"
authors = ["Nighty3098 <154594695+Nighty3098@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyrogram = "^2.0.106"
pretty-errors = "^1.2.25"
loguru = "^0.7.3"
tgcrypto = "^1.2.5"
python-dotenv = "^1.0.1"
aiosqlite = "^0.20.0"
statemachine = "^0.1"
requests = "^2.32.3"
yfinance = "^0.2.50"
user-agent = "^0.1.10"
psutil = "^6.1.0"
pytz = "^2024.2"
matplotlib = "^3.10.0"
keras = "^3.7.0"
tensorflow = {extras = ["and-cuda"], version = "^2.18.0"}
transformers = "^4.47.0"
tensorrt = "^10.7.0"
mplfinance = "^0.12.10b0"
joblib = "^1.4.2"
scikit-learn = "^1.6.0"
plotly = "^5.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
